Pass debugger along